# fastapi-clean-architecture

./: main.py  pyproject.toml
core/: database.py
models/: base.py  note.py  user.py
repositories/: base.py
shemas/: note.py  user.py
